--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Foundations of Object-Oriented Languages》/目录.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Foundations of Object-Oriented Languages》/目录.md
@@ -1,5 +1,7 @@
 《Foundations of Object-Oriented Languages》
 
+<img src="https://books.google.co.jp/books/content?id=9NGWq3K1RwUC&pg=PP1&img=1&zoom=3&hl=en&sig=ACfU3U3Fl_D2V80vrHSZcPlT2nSePobIzg&w=1280" style="zoom:15%;" />
+
 **第1章 引言** (Chapter 1: Introduction) 3  
 1.1 编程语言中的类型系统 (Type systems in programming languages) 4  
 1.2 类型检查与强类型语言 (Type checking and strongly typed languages) 6  
