--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Functional Programming in Kotlin by Tutorials》/目录.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Functional Programming in Kotlin by Tutorials》/目录.md
@@ -1,4 +1,6 @@
-以下是《Functional Programming in Kotlin by Tutorials》书的目录的中英双语对照版：
+《Functional Programming in Kotlin by Tutorials》
+
+<img src="https://assets.alexandria.raywenderlich.com/books/86048c1f8ce818d09828b65b3f454c3893faf94c912fe498f0cebcf4b0a85afa/images/6843a198a81093243751aaeaeb36f849/original.png" style="zoom:5%;" />
 
 ### 目录 (Contents)
 
