--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Semantics of Programming Language (Gunter)》/目录.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Semantics of Programming Language (Gunter)》/目录.md
@@ -2,67 +2,131 @@
 
 <img src="https://p.ipic.vip/1yemn0.jpg" alt="img" style="zoom:25%;" />
 
-**第1章 引言** (Chapter 1: Introduction)  
-1.1  语义 (Semantics)  
-1.2  编程语言的语义 (Semantics of Programming Languages)  
-1.3  备注 (Notes)  
 
-**第2章 简单类型的 λ 演算** (Chapter 2: The Simply-Typed Lambda Calculus)  
-2.1  λ 项的语法 (Syntax of Lambda Terms)  
-2.2  规则 (Rules)  
-2.3  模型 (Models)  
-2.4  备注 (Notes)  
 
-**第3章 简单类型的范畴模型** (Chapter 3: Categorical Models of Simple Types)  
-3.1  笛卡尔闭合的积 (Products and Cartesian Closure)  
-3.2  带常数和积的 λ 演算 (Lambda Calculus with Constants and Products)  
-3.3  范畴论的应用 (The Use of Category Theory)  
-3.4  备注 (Notes)  
+**第1章 引言** (Chapter 1: Introduction)
+ 1.1  语义 (Semantics) ........................... 1
+ 1.2  编程语言的语义 (Semantics of Programming Languages) .......... 9
+ 1.3  备注 (Notes) .............................. 29
 
-**第4章 函数的递归定义** (Chapter 4: Recursive Definitions of Functions)  
-4.1  计算函数的编程语言 (A Programming Language for Computable Functions)  
-4.2  完全偏序集中的不动点 (Fixed Points in Complete Partial Orders)  
-4.3  PCF 的不动点语义 (Fixed-Point Semantics of PCF)  
-4.4  有界递归 (Bounded Recursion)  
-4.5  备注 (Notes)  
+**第2章 简单类型的 λ 演算** (Chapter 2: The Simply-Typed Lambda Calculus)
+ 2.1  λ 项的语法 (Syntax of Lambda Terms) ........... 32
+ 2.2  规则 (Rules) .............................. 38
+ 2.3  模型 (Models) ............................. 47
+ 2.4  备注 (Notes) .............................. 61
 
-**第5章 两种有限逼近理论** (Chapter 5: Two Theories of Finite Approximation)  
-5.1  β-域 (Beta-Domains)  
-5.2  稳定函数和 DI-域 (Stable Functions and DI-Domains)  
-5.3  范畴之间的等价 (Equivalences between Categories)  
-5.4  备注 (Notes)  
+**第3章 简单类型的范畴模型** (Chapter 3: Categorical Models of Simple Types)
+ 3.1  笛卡尔闭合的积 (Products and Cartesian Closure) ........... 63
+ 3.2  带常数和积的 λ 演算 (Lambda Calculus with Constants and Products) ... 76
+ 3.3  范畴论的应用 (The Use of Category Theory) ................. 84
+ 3.4  备注 (Notes) .............................. 95
 
-**第6章 解释的关系** (Chapter 6: Relating Interpretations)  
-6.1  完全抽象 (Full Abstraction)  
-6.2  充分性结果的扩展 (Extensions of Adequacy Results)  
-6.3  积与和 (Products and Sums)  
-6.4  备注 (Notes)  
+**第4章 函数的递归定义** (Chapter 4: Recursive Definitions of Functions)
+ 4.1  计算函数的编程语言 (A Programming Language for Computable Functions) .......... 100
+ 4.2  完全偏序集中的不动点 (Fixed Points in Complete Partial Orders) ....... 114
+ 4.3  PCF 的不动点语义 (Fixed-Point Semantics of PCF) .......... 128
+ 4.4  有界递归 (Bounded Recursion) ....................... 138
+ 4.5  备注 (Notes) .............................. 143
 
-**第7章 类型和求值** (Chapter 7: Types and Evaluation)  
-7.1  表达力 (Expressiveness)  
-7.2  安全性 (Security)  
-7.3  引用类型 (Reference Types)  
-7.4  递归类型 (Recursive Types)  
-7.5  ML 的多态性和类型推导 (ML Polymorphism and Type Inference)  
-7.6  备注 (Notes)  
+**第5章 两种有限逼近理论** (Chapter 5: Two Theories of Finite Approximation)
+ 5.1  β-域 (Beta-Domains) ....................... 147
+ 5.2  稳定函数和 DI-域 (Stable Functions and DI-Domains) ........ 155
+ 5.3  范畴之间的等价 (Equivalences between Categories) ......... 167
+ 5.4  备注 (Notes) .............................. 176
 
-**第8章 通用域** (Chapter 8: Universal Domains)  
-8.1  无类型 λ 演算 (Untyped Lambda Calculus)  
-8.2  域方程 (Domain Equations)  
-8.3  备注 (Notes)  
+**第6章 解释的关系** (Chapter 6: Relating Interpretations)
+ 6.1  完全抽象 (Full Abstraction) ..................... 178
+ 6.2  充分性结果的扩展 (Extensions of Adequacy Results) ......... 190
+ 6.3  积与和 (Products and Sums) ...................... 199
+ 6.4  备注 (Notes) .............................. 212
 
-**第9章 子类型多态性** (Chapter 9: Subtype Polymorphism)  
-9.1  子类型作为子集 (Subtypes as Subsets)  
-9.2  作为隐式强制的替代 (Subsumption as Implicit Coercion)  
-9.3  备注 (Notes)  
+**第7章 类型和求值** (Chapter 7: Types and Evaluation)
+ 7.1  表达力 (Expressiveness) ...................... 218
+ 7.2  安全性 (Security) ........................... 226
+ 7.3  引用类型 (Reference Types) .................... 230
+ 7.4  递归类型 (Recursive Types) .................... 235
+ 7.5  ML 的多态性和类型推导 (ML Polymorphism and Type Inference) .... 243
+ 7.6  备注 (Notes) .............................. 253
 
-**第10章 域论** (Chapter 10: Domain Theory)  
-10.1  函子的不动点 (Fixed Points of Functors)  
-10.2  双有限域 (Bifinite Domains)  
-10.3  附加和幂域 (Adjunctions and Powerdomains)  
-10.4  备注 (Notes)  
+**第8章 通用域** (Chapter 8: Universal Domains)
+ 8.1  无类型 λ 演算 (Untyped Lambda Calculus) ............ 255
+ 8.2  域方程 (Domain Equations) ...................... 270
+ 8.3  备注 (Notes) .............................. 282
 
-**第11章 参数化多态性** (Chapter 11: Parametric Polymorphism)  
-11.1  表达参数化多态性的演算 (Calculi for Expressing Parametric Polymorphism)  
-11.2  域的索引族 (Indexed Families of Domains)  
-11.3  备注 (Notes)  
+**第9章 子类型多态性** (Chapter 9: Subtype Polymorphism)
+ 9.1  子类型作为子集 (Subtypes as Subsets) ............... 287
+ 9.2  作为隐式强制的替代 (Subsumption as Implicit Coercion) ........ 298
+ 9.3  备注 (Notes) .............................. 312
+
+**第10章 域论** (Chapter 10: Domain Theory)
+ 10.1  函子的不动点 (Fixed Points of Functors) .............. 316
+ 10.2  双有限域 (Bifinite Domains) ..................... 330
+ 10.3  附加和幂域 (Adjunctions and Powerdomains) ........... 340
+ 10.4  备注 (Notes) .............................. 353
+
+**第11章 参数化多态性** (Chapter 11: Parametric Polymorphism)
+ 11.1  表达参数化多态性的演算 (Calculi for Expressing Parametric Polymorphism) .......... 357
+ 11.2  域的索引族 (Indexed Families of Domains) ............ 374
+ 11.3  备注 (Notes) .............................. 387
+
+### --------------------------
+
+### **表格目录 (List of Tables)**
+
+------
+
+**表格目录** (List of Tables)
+
+1.1 ALGOL 60 赋值语句的语义 (ALGOL 60 Semantics for Assignments) .............. 11
+ 1.2 ALGOL 60 程序示例 (An ALGOL 60 Program) ............................. 12
+ 1.3 简单命令式编程语言的语法 (Syntax for the Simple Imperative Programming Language) .......... 15
+ 1.4 简单命令式编程语言的转换语义 (Transition Semantics for the Simple Imperative Programming Language) .... 16
+ 1.5 简单命令式编程语言的自然语义 (Natural Semantics for the Simple Imperative Programming Language) ..... 20
+ 1.6 SECD 机器的转换规则 (Transition Rules for the SECD Machine) .............. 26
+
+2.1 简单类型 λ 演算的类型规则 (Typing Rules for the Simply-Typed Lambda Calculus) .............. 38
+ 2.2 简单类型 λ 演算的等式规则 (Equational Rules for the Simply-Typed Lambda Calculus) .......... 44
+
+3.1 笛卡尔积与常数的类型规则 (Typing Rules for Products and Constants) ............ 77
+ 3.2 笛卡尔积的等式规则 (Equational Rules for Products) ..................... 78
+ 3.3 求和的类型规则 (Typing Rules for Sums) .......................... 92
+ 3.4 求和的等式规则 (Equational Rules for Sums) ...................... 93
+
+4.1 PCF 的类型规则 (Typing Rules for PCF) ........................... 102
+ 4.2 名义调用 PCF 的等式规则 (Equational Rules for Call-by-Name PCF) .......... 104
+ 4.3 名义调用 PCF 的转换规则 (Transition Rules for Call-by-Name Evaluation of PCF) ......... 106
+ 4.4 名义调用 PCF 的自然规则 (Natural Rules for Call-by-Name Evaluation of PCF) ........ 109
+ 4.5 斐波那契函数 (The Fibonacci Function) ......................... 113
+
+6.1 操作等价程序的不同指示 (Operationally Equivalent Programs with Different Denotations) .... 180
+ 6.2 并行和顺序析取的真值表 (Truth Tables for Parallel and Sequential Disjunction) .......... 181
+ 6.3 并行条件的类型和操作规则 (Typing and Operational Rules for the Parallel Conditional) ........... 183
+ 6.4 名值调用 PCF 的自然规则 (Natural Rules for Call-by-Value Evaluation of PCF) .......... 195
+ 6.5 产品和求和的名义调用 (Call-by-Name Evaluation of Products and Sums) ........... 201
+ 6.6 产品和求和的名值调用 (Call-by-Value Evaluation of Products and Sums) .......... 202
+
+7.1 Scheme 中局部变量和高阶函数的使用 (Using Local Variables and Higher-Order Functions in Scheme) ......... 221
+ 7.2 名值调用固定点组合子的 ML 版本 (ML Version of the Call-by-Value Fixed-Point Combinator) ........ 223
+ 7.3 带类型错误的名值调用求值 (Call-by-Value Evaluation with Type Errors) .......... 228
+ 7.4 引用的类型规则 (Typing for References) ......................... 232
+ 7.5 带引用的 PCF 的操作规则 (Operational Rules for PCF with References) ........... 234
+ 7.6 FPC 中递归定义类型的类型规则 (Typing Rules for Recursively Defined Types in FPC) ........... 236
+ 7.7 FPC 的操作规则 (Operational Rules for FPC) ..................... 238
+ 7.8 隐式类型 λ 演算 (Implicitly-Typed Lambda Calculus) ............... 243
+ 7.9 ML₀ 的类型规则 (Typing Rules for ML₀) ......................... 247
+ 7.10 ML₀ 的类型推导规则 (Rules for ML₀ Type Inference) .................. 251
+
+8.1 无类型 λ 演算的等式规则 (Equational Rules for Untyped Lambda Calculus) .............. 256
+ 8.2 带类型错误的名义调用求值 (Call-by-Name Evaluation with Type Errors) .............. 265
+
+9.1 记录和变体的类型规则 (Typing Rules for Records and Variants) ............. 292
+ 9.2 子类型规则 (Rules for Subtyping) .............................. 293
+ 9.3 记录和变体的名值调用规则 (Rules for Call-by-Value Evaluation of Records and Variants) ......... 302
+
+11.1 带 ∀ 引入和消除的 ML₀ 类型规则 (Typing Rules for ML₀ with ∀ Introduction and Elimination) ....... 360
+ 11.2 多态 λ 演算的类型规则 (Typing Rules for the Polymorphic Lambda Calculus) ............. 362
+ 11.3 多态 λ 演算的等式规则 (Equational Rules for the Polymorphic Lambda Calculus) ............ 364
+ 11.4 多态 λ 演算的三层类型规则 (Three-Level Typing Rules for the Polymorphic Lambda Calculus) ......... 369
+ 11.5 类型：类型演算的类型规则 (Typing Rules for the Type:Type Calculus) ................. 371
+ 11.6 类型：类型演算的 β 和 η 规则 (β- and η-Rules for the Type:Type Calculus) ............... 372
+
