--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Theories of Programming Languages》/目录.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Theories of Programming Languages》/目录.md
@@ -4,6 +4,200 @@
 
 <img src="https://p.ipic.vip/gn2qhd.jpg" alt="img" style="zoom:25%;" />
 
+**前言** (Preface)
+
+**第1章 谓词逻辑** (Chapter 1: Predicate Logic)
+
+1.1 抽象语法 (Abstract Syntax) ......................................... 1
+ 1.2 谓词逻辑的指称语义 (Denotational Semantics of Predicate Logic) ........ 2
+ 1.3 有效性与推理 (Validity and Inference) ............................... 4
+ 1.4 绑定与替换 (Binding and Substitution) ............................... 8
+
+**第2章 简单命令式语言** (Chapter 2: The Simple Imperative Language)
+
+2.1 语法 (Syntax) ...................................................... 9
+ 2.2 指称语义 (Denotational Semantics) ................................. 10
+ 2.3 域与连续函数 (Domains and Continuous Functions) .................. 12
+ 2.4 最小不动点定理 (The Least Fixed-Point Theorem) .................... 14
+ 2.5 变量声明与替换 (Variable Declarations and Substitution) ............ 16
+ 2.6 语法糖：for命令 (Syntactic Sugar: The for Command) ................. 18
+ 2.7 算术错误 (Arithmetic Errors) ...................................... 19
+ 2.8 健全性与完全抽象性 (Soundness and Full Abstraction) ............... 20
+
+**第3章 程序规范及其证明** (Chapter 3: Program Specifications and Their Proofs)
+
+3.1 规范的语法与语义 (Syntax and Semantics of Specifications) ........... 21
+ 3.2 推理规则 (Inference Rules) ........................................ 23
+ 3.3 赋值与顺序组合的规则 (Rules for Assignment and Sequential Composition) ............................................................... 24
+ 3.4 while命令的规则 (Rules for while Commands) ......................... 25
+ 3.5 进一步的规则 (Further Rules) ...................................... 26
+ 3.6 计算斐波那契数 (Computing Fibonacci Numbers) ...................... 27
+ 3.7 快速求幂 (Fast Exponentiation) .................................... 28
+ 3.8 复杂性与局限性 (Complications and Limitations) .................... 29
+
+**第4章 数组** (Chapter 4: Arrays)
+
+4.1 抽象语法 (Abstract Syntax) ........................................ 31
+ 4.2 指称语义 (Denotational Semantics) ................................. 32
+ 4.3 二分搜索 (Binary Search) .......................................... 33
+ 4.4 数组的推理规则 (Inference Rules for Arrays) ......................... 34
+ 4.5 关于数组的高阶断言 (Higher-Order Assertions About Arrays) .......... 35
+
+**第5章 失败、输入输出与延续** (Chapter 5: Failure, Input-Output, and Continuations)
+
+5.1 fail命令 (The fail Command) ....................................... 37
+ 5.2 中间输出与序列域 (Intermediate Output and a Domain of Sequences) ... 38
+ 5.3 连续性的物理论证 (The Physical Argument for Continuity) ........... 39
+ 5.4 域的积与不交并 (Products and Disjoint Unions of Predomains) ........ 41
+ 5.5 递归域同构 (Recursive Domain Isomorphisms) ......................... 42
+ 5.6 中间输入与恢复域 (Intermediate Input and a Domain of Resumptions) . 43
+ 5.7 延续语义 (Continuation Semantics) ................................ 45
+ 5.8 延续语义扩展 (Continuation Semantics of Extensions) ............... 47
+
+**第6章 转换语义** (Chapter 6: Transition Semantics)
+
+6.1 配置与转换关系 (Configurations and the Transition Relation) ....... 49
+ 6.2 简单语言的推理规则 (Inference Rules for the Simple Language) ....... 50
+ 6.3 fail的转换语义 (Transition Semantics of fail) ...................... 51
+ 6.4 输入与输出 (Input and Output) ..................................... 52
+
+**第7章 非确定性与守护命令** (Chapter 7: Nondeterminism and Guarded Commands)
+
+7.1 语法与转换语义 (Syntax and Transition Semantics) .................. 55
+ 7.2 有界非确定性与幂域 (Bounded Nondeterminism and Powerdomains) ....... 57
+ 7.3 语义方程 (Semantic Equations) ..................................... 59
+ 7.4 程序规范与证明 (Program Specification and Proof) ................... 61
+ 7.5 最弱前提条件 (Weakest Preconditions) ............................... 63
+
+**第8章 共享变量并发** (Chapter 8: Shared-Variable Concurrency)
+
+8.1 并发组合 (Concurrent Composition) ................................ 67
+ 8.2 临界区 (Critical Regions) ......................................... 69
+ 8.3 互斥与条件临界区 (Mutual Exclusion and Conditional Critical Regions) 70
+ 8.4 死锁 (Deadlock) ................................................... 72
+ 8.5 公平性 (Fairness) ................................................. 73
+ 8.6 恢复语义 (Resumption Semantics) .................................. 74
+ 8.7 转换轨迹 (Transition Traces) ...................................... 75
+ 8.8 跳跃与哼唱 (Stuttering and Mumbling) ............................... 79
+
+**第9章 通信顺序进程** (Chapter 9: Communicating Sequential Processes)
+
+9.1 语法 (Syntax) ...................................................... 81
+ 9.2 转换语义 (Transition Semantics) .................................. 83
+ 9.3 可能的限制 (Possible Restrictions) ............................... 85
+ 9.4 示例 (Examples) .................................................. 86
+ 9.5 死锁 (Deadlock) ................................................... 87
+ 9.6 公平性 (Fairness) ................................................. 88
+
+**第10章 λ演算** (Chapter 10: The Lambda Calculus)
+
+10.1 语法 (Syntax) .................................................... 91
+ 10.2 归约 (Reduction) ................................................. 92
+ 10.3 正规序求值 (Normal-Order Evaluation) ............................. 95
+ 10.4 急切求值 (Eager Evaluation) ..................................... 99
+ 10.5 指称语义 (Denotational Semantics) ............................... 102
+ 10.6 在λ演算中的编程 (Programming in the Lambda Calculus) .............. 110
+
+**第11章 急切的函数式语言** (Chapter 11: An Eager Functional Language)
+
+11.1 具体语法 (Concrete Syntax) ...................................... 115
+ 11.2 求值语义 (Evaluation Semantics) ................................ 116
+ 11.3 定义、模式和递归 (Definitions, Patterns, and Recursion) .......... 121
+ 11.4 列表 (Lists) ..................................................... 124
+ 11.5 示例 (Examples) ................................................. 125
+ 11.6 直接指称语义 (Direct Denotational Semantics) ..................... 129
+ 11.7 动态绑定 (Dynamic Binding) ..................................... 136
+
+**第12章 在函数式语言中使用延续** (Chapter 12: Continuations in a Functional Language)
+
+12.1 延续语义 (Continuation Semantics) .............................. 141
+ 12.2 将延续作为值 (Continuations as Values) .......................... 145
+ 12.3 延续作为编程技术 (Continuations as a Programming Technique) ...... 147
+ 12.4 推导出一阶语义 (Deriving a First-Order Semantics) ............... 148
+ 12.5 一阶语义总结 (First-Order Semantics Summarized) ................ 154
+ 12.6 一阶语义与延续语义的关系 (Relating First-Order and Continuation Semantics) ................................................... 159
+
+**第13章 类Iswim语言** (Chapter 13: Iswim-like Languages)
+
+13.1 别名、引用和状态 (Aliasing, References, and States) ............... 163
+ 13.2 求值语义 (Evaluation Semantics) ................................ 166
+ 13.3 延续语义 (Continuation Semantics) .............................. 168
+ 13.4 一些语法糖 (Some Syntactic Sugar) ............................... 172
+ 13.5 一阶语义 (First-Order Semantics) ................................ 173
+ 13.6 示例 (Examples) ................................................. 175
+ 13.7 异常 (Exceptions) ............................................... 178
+ 13.8 回溯 (Backtracking) ............................................. 180
+ 13.9 输入与输出 (Input and Output) ................................... 182
+ 13.10 一些复杂性 (Some Complications) ................................. 184
+
+**第14章 一种正常序语言** (Chapter 14: A Normal-Order Language)
+
+14.1 求值语义 (Evaluation Semantics) ................................ 189
+ 14.2 语法糖 (Syntactic Sugar) ........................................ 192
+ 14.3 示例 (Examples) ................................................. 193
+ 14.4 直接指称语义 (Direct Denotational Semantics) ..................... 195
+ 14.5 重新审视归约 (Reduction Revisited) ............................... 197
+ 14.6 惰性求值 (Lazy Evaluation) ...................................... 198
+
+**第15章 简单类型系统** (Chapter 15: The Simple Type System)
+
+15.1 类型、上下文与判定 (Types, Contexts, and Judgements) ............. 203
+ 15.2 推理规则 (Inference Rules) ...................................... 205
+ 15.3 显式类型 (Explicit Typing) ...................................... 211
+ 15.4 类型的外在含义 (The Extrinsic Meaning of Types) .................. 214
+ 15.5 内在视图 (The Intrinsic View) .................................... 221
+ 15.6 集合论语义 (Set-Theoretic Semantics) ............................ 226
+ 15.7 递归类型 (Recursive Types) ...................................... 228
+
+**第16章 子类型和交叉类型** (Chapter 16: Subtypes and Intersection Types)
+
+16.1 子类型推理规则 (Inference Rules for Subtyping) .................... 233
+ 16.2 命名的积与和 (Named Products and Sums) .......................... 236
+ 16.3 交叉类型 (Intersection Types) .................................... 238
+ 16.4 外在语义 (Extrinsic Semantics) .................................. 242
+ 16.5 泛型操作符 (Generic Operators) .................................. 246
+ 16.6 内在语义 (Intrinsic Semantics) .................................. 249
+
+**第17章 多态** (Chapter 17: Polymorphism)
+
+17.1 语法与推理规则 (Syntax and Inference Rules) ....................... 255
+ 17.2 多态编程 (Polymorphic Programming) ............................... 258
+ 17.3 外在语义 (Extrinsic Semantics) .................................. 265
+
+**第18章 模块规范** (Chapter 18: Module Specification)
+
+18.1 类型定义 (Type Definitions) ..................................... 273
+ 18.2 存在量化与模块 (Existential Quantification and Modules) .......... 276
+ 18.3 用一种抽象实现另一种抽象 (Implementing One Abstraction in Terms of Another) .................................................. 281
+
+**第19章 类Algol语言** (Chapter 19: Algol-like Languages)
+
+19.1 数据类型与短语类型 (Data Types and Phrase Types) ................. 287
+ 19.2 短语与类型推理规则 (Phrases and Type Inference Rules) ........... 290
+ 19.3 示例 (Examples) .................................................. 294
+ 19.4 数组与声明符 (Arrays and Declarators) ............................ 297
+ 19.5 包含堆栈机制的语义 (A Semantics Embodying the Stack Discipline) .... 299
+ 19.6 变量的语义 (The Semantics of Variables) .......................... 305
+ 19.7 过程的语义 (The Semantics of Procedures) ........................ 307
+ 19.8 一些扩展与简化 (Some Extensions and Simplifications) ............. 310
+
+**附录 数学背景** (Appendix: Mathematical Background)
+
+A.1 集合 (Sets) ....................................................... 317
+ A.2 关系 (Relations) .................................................. 319
+ A.3 函数 (Functions) .................................................. 321
+ A.4 集合之间的关系与函数 (Relations and Functions Between Sets) ......... 325
+ A.5 关于积与不交并的更多内容 (More About Products and Disjoint Unions) ... 328
+ A.6 关于关系的更多内容 (More About Relations) ........................ 331
+
+**参考文献** (Bibliography) ............................................... 337
+
+**索引** (Index) .......................................................... 353
+
+目录已完整生成！如需进一步调整或其他帮助，请告诉我！
+
+----------------------------
+
 **第1章 谓词逻辑** (Chapter 1: Predicate Logic)  
 1.1 抽象语法 (Abstract Syntax)  
 1.2 谓词逻辑的指称语义 (Denotational Semantics of Predicate Logic)  
