--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Type Theory and Formal Proof An Introduction 》/目录.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Type Theory and Formal Proof An Introduction 》/目录.md
@@ -2,6 +2,317 @@
 
 <img src="https://p.ipic.vip/m2hhm4.jpg" alt="img" style="zoom:25%;" />
 
+**前言** (Foreword) ................................................... xiii
+ **序言** (Preface) ..................................................... xv
+ **致谢** (Acknowledgements) ........................................... xxvii
+ **希腊字母表** (Greek alphabet) ....................................... xxviii
+
+------
+
+**第1章 无类型 λ 演算** (Chapter 1: Untyped Lambda Calculus)
+
+1.1 函数的输入输出行为 (Input–output behaviour of functions) .................... 1
+ 1.2 函数的本质 (The essence of functions) ........................................... 2
+ 1.3 λ 项 (Lambda-terms) ............................................................. 4
+ 1.4 自由变量和绑定变量 (Free and bound variables) ............................... 8
+ 1.5 Alpha 转换 (Alpha conversion) .................................................... 9
+ 1.6 替换 (Substitution) .............................................................. 11
+ 1.7 基于 α 等价的 λ 项 (Lambda-terms modulo α-equivalence) .................. 14
+ 1.8 Beta 归约 (Beta reduction) ....................................................... 16
+ 1.9 正规形式和一致性 (Normal forms and confluence) ............................. 19
+ 1.10 不动点定理 (Fixed Point Theorem) ............................................ 24
+ 1.11 总结 (Conclusions) ............................................................. 26
+ 1.12 拓展阅读 (Further reading) ..................................................... 27
+ **习题** (Exercises) ................................................................. 29
+
+------
+
+**第2章 简单类型的 λ 演算** (Chapter 2: Simply Typed Lambda Calculus)
+
+2.1 添加类型 (Adding types) ......................................................... 33
+ 2.2 简单类型 (Simple types) ......................................................... 34
+ 2.3 Church 和 Curry 类型化 (Church-typing and Curry-typing) ..................... 36
+ 2.4 Church λ→ 的推导规则 (Derivation rules for Church’s λ→) ..................... 39
+ 2.5 λ→ 中推导的不同格式 (Different formats for a derivation in λ→) ........... 44
+ 2.6 类型理论中的问题种类 (Kinds of problems to be solved in type theory) ........ 46
+ 2.7 λ→ 的良类型性 (Well-typedness in λ→) .......................................... 47
+ 2.8 λ→ 的类型检查 (Type Checking in λ→) ......................................... 50
+ 2.9 λ→ 中的术语发现 (Term Finding in λ→) ........................................ 51
+ 2.10 λ→ 的一般属性 (General properties of λ→) ................................. 53
+ 2.11 λ→ 的归约 (Reduction and λ→) ............................................... 59
+ 2.12 后果 (Consequences) ............................................................ 63
+ 2.13 总结 (Conclusions) ............................................................. 64
+ 2.14 拓展阅读 (Further reading) ..................................................... 65
+ **习题** (Exercises) ................................................................. 66
+
+------
+
+**第3章 二阶类型 λ 演算** (Chapter 3: Second Order Typed Lambda Calculus)
+
+3.1 类型抽象与类型应用 (Type-abstraction and type-application) .................. 69
+ 3.2 Π 类型 (Π-types) ............................................................... 71
+ 3.3 二阶抽象与应用规则 (Second order abstraction and application rules) ........ 72
+ 3.4 系统 λ2 (The system λ2) ......................................................... 73
+ 3.5 λ2 中的推导示例 (Example of a derivation in λ2) ................................. 76
+ 3.6 λ2 的属性 (Properties of λ2) ..................................................... 78
+ 3.7 总结 (Conclusions) ............................................................. 80
+ 3.8 拓展阅读 (Further reading) ..................................................... 80
+ **习题** (Exercises) ................................................................. 82
+
+------
+
+**第4章 类型依赖类型** (Chapter 4: Types Dependent on Types)
+
+4.1 类型构造器 (Type constructors) ................................................. 85
+ 4.2 λω 中的排序规则与变量规则 (Sort-rule and var-rule in λω) ..................... 88
+ 4.3 λω 中的弱化规则 (The weakening rule in λω) .................................. 90
+ 4.4 λω 中的形成规则 (The formation rule in λω) ................................... 93
+ 4.5 λω 中的应用和抽象规则 (Application and abstraction rules in λω) ............ 94
+ 4.6 简化推导 (Shortened derivations) ................................................ 95
+ 4.7 转换规则 (The conversion rule) ................................................ 97
+ 4.8 λω 的属性 (Properties of λω) .................................................... 99
+ 4.9 总结 (Conclusions) ............................................................. 100
+ 4.10 拓展阅读 (Further reading) .................................................... 100
+ **习题** (Exercises) ................................................................. 101
+
+------
+
+**第5章 类型依赖项** (Chapter 5: Types Dependent on Terms)
+
+5.1 缺失的扩展 (The missing extension) .......................................... 103
+ 5.2 λP 的推导规则 (Derivation rules of λP) ....................................... 105
+ 5.3 λP 中的推导示例 (An example derivation in λP) .............................. 107
+ 5.4 λP 中的最小谓词逻辑 (Minimal predicate logic in λP) ......................... 109
+ 5.5 λP 中逻辑推导示例 (Example of a logical derivation in λP) .................. 115
+ 5.6 总结 (Conclusions) ............................................................. 118
+ 5.7 拓展阅读 (Further reading) ..................................................... 119
+ **习题** (Exercises) ................................................................. 121
+
+------
+
+**第6章 构造演算** (Chapter 6: The Calculus of Constructions)
+
+6.1 系统 λC (The system λC) ......................................................... 123
+ 6.2 λ 立方体 (The λ-cube) .......................................................... 125
+ 6.3 λC 的属性 (Properties of λC) .................................................. 128
+ 6.4 总结 (Conclusions) ............................................................. 132
+ 6.5 拓展阅读 (Further reading) ..................................................... 133
+ **习题** (Exercises) ................................................................. 134
+
+**第7章 在 λC 中编码逻辑概念** (Chapter 7: The Encoding of Logical Notions in λC)
+
+7.1 类型论中的矛盾与否定 (Absurdity and negation in type theory) ............... 137
+ 7.2 类型论中的合取与析取 (Conjunction and disjunction in type theory) ......... 139
+ 7.3 λC 中命题逻辑的示例 (An example of propositional logic in λC) ............. 144
+ 7.4 λC 中的经典逻辑 (Classical logic in λC) ...................................... 146
+ 7.5 λC 中的谓词逻辑 (Predicate logic in λC) .................................... 150
+ 7.6 λC 中谓词逻辑的示例 (An example of predicate logic in λC) ................. 154
+ 7.7 总结 (Conclusions) ........................................................... 157
+ 7.8 拓展阅读 (Further reading) .................................................. 159
+ **习题** (Exercises) ............................................................... 162
+
+------
+
+**第8章 定义** (Chapter 8: Definitions)
+
+8.1 定义的本质 (The nature of definitions) ...................................... 165
+ 8.2 归纳和递归定义 (Inductive and recursive definitions) ....................... 167
+ 8.3 定义的格式 (The format of definitions) .................................... 168
+ 8.4 定义的实例化 (Instantiations of definitions) ............................... 170
+ 8.5 定义的正式格式 (A formal format for definitions) ........................... 172
+ 8.6 依赖假设的定义 (Definitions depending on assumptions) ..................... 174
+ 8.7 给证明命名 (Giving names to proofs) ....................................... 175
+ 8.8 一个一般证明和特化版本 (A general proof and a specialised version) ...... 178
+ 8.9 数学陈述作为正式定义 (Mathematical statements as formal definitions) ... 180
+ 8.10 总结 (Conclusions) ........................................................ 182
+ 8.11 拓展阅读 (Further reading) ................................................ 183
+ **习题** (Exercises) ............................................................... 185
+
+------
+
+**第9章 扩展 λC 的定义** (Chapter 9: Extension of λC with Definitions)
+
+9.1 将 λC 扩展为 λD0 系统 (Extension of λC to the system λD0) .................. 189
+ 9.2 含定义的推断扩展 (Judgements extended with definitions) ................... 190
+ 9.3 添加定义的规则 (The rule for adding a definition) ........................... 192
+ 9.4 实例化定义的规则 (The rule for instantiating a definition) .................. 193
+ 9.5 定义展开与 δ 转换 (Definition unfolding and δ-conversion) .................. 197
+ 9.6 δ 转换的示例 (Examples of δ-conversion) .................................... 200
+ 9.7 含 Δ 的转换规则扩展 (The conversion rule extended with Δ) ............... 202
+ 9.8 λD0 的推导规则 (The derivation rules for λD0) ............................... 203
+ 9.9 λD0 推导规则的深入探讨 (A closer look at the derivation rules of λD0) ..... 204
+ 9.10 总结 (Conclusions) ........................................................ 206
+ 9.11 拓展阅读 (Further reading) ................................................ 207
+ **习题** (Exercises) ............................................................... 208
+
+------
+
+**第10章 λD 的规则和性质** (Chapter 10: Rules and Properties of λD)
+
+10.1 描述性与原始定义 (Descriptive versus primitive definitions) ................ 211
+ 10.2 公理与公理化概念 (Axioms and axiomatic notions) .......................... 212
+ 10.3 原始定义的规则 (Rules for primitive definitions) ........................... 214
+ 10.4 λD 的性质 (Properties of λD) ............................................... 215
+ 10.5 λD 的规范化与一致性 (Normalisation and confluence in λD) ................. 219
+ 10.6 总结 (Conclusions) ........................................................ 221
+ 10.7 拓展阅读 (Further reading) ................................................ 221
+ **习题** (Exercises) ............................................................... 223
+
+------
+
+**第11章 λD 中的旗标式自然推导** (Chapter 11: Flag-Style Natural Deduction in λD)
+
+11.1 λD 中的形式推导 (Formal derivations in λD) ................................. 225
+ 11.2 比较 λD 的形式与旗标式推导 (Comparing formal and flag-style λD) ........ 228
+ 11.3 关于旗标式推导的约定 (Conventions about flag-style proofs in λD) .......... 229
+ 11.4 引入与消去规则 (Introduction and elimination rules) ...................... 232
+ 11.5 构造命题逻辑的规则 (Rules for constructive propositional logic) ........... 234
+ 11.6 λD 中逻辑推导示例 (Examples of logical derivations in λD) ................. 237
+ 11.7 忽略未更改的参数列表 (Suppressing unaltered parameter lists) ............ 239
+ 11.8 经典命题逻辑的规则 (Rules for classical propositional logic) ................ 240
+ 11.9 ∨ 的替代自然推导规则 (Alternative natural deduction rules for ∨) .......... 243
+ 11.10 构造谓词逻辑的规则 (Rules for constructive predicate logic) ............. 246
+ 11.11 经典谓词逻辑的规则 (Rules for classical predicate logic) ................ 249
+ 11.12 总结 (Conclusions) ....................................................... 252
+ 11.13 拓展阅读 (Further reading) .............................................. 253
+ **习题** (Exercises) ............................................................. 254
+
+------
+
+**第12章 λD 中的数学初探** (Chapter 12: Mathematics in λD: A First Attempt)
+
+12.1 一个示例开篇 (An example to start with) .................................. 257
+ 12.2 等式 (Equality) ............................................................. 259
+ 12.3 等式的一致性属性 (The congruence property of equality) ................... 262
+ 12.4 顺序 (Orders) .............................................................. 264
+ 12.5 关于顺序的证明 (A proof about orders) .................................. 266
+ 12.6 唯一存在性 (Unique existence) ............................................. 268
+ 12.7 描述符 ι (The descriptor ι) ................................................ 271
+ 12.8 总结 (Conclusions) ....................................................... 274
+ 12.9 拓展阅读 (Further reading) .............................................. 275
+ **习题** (Exercises) ............................................................. 276
+
+------
+
+**第13章 集合与子集** (Chapter 13: Sets and Subsets)
+
+13.1 在 λD 中处理子集 (Dealing with subsets in λD) ........................... 279
+ 13.2 基本集合论概念 (Basic set-theoretic notions) ............................. 282
+ 13.3 特殊子集 (Special subsets) ............................................... 287
+ 13.4 关系 (Relations) .......................................................... 288
+ 13.5 映射 (Maps) ............................................................. 291
+ 13.6 数学概念的表示 (Representation of mathematical notions) .................. 295
+ 13.7 总结 (Conclusions) ....................................................... 296
+ 13.8 拓展阅读 (Further reading) .............................................. 297
+ **习题** (Exercises) ............................................................. 302
+
+------
+
+**第14章 λD 中的数与算术** (Chapter 14: Numbers and Arithmetic in λD)
+
+14.1 自然数的 Peano 公理 (The Peano axioms for natural numbers) ................ 305
+ 14.2 引入整数的公理化方法 (Introducing integers the axiomatic way) ............ 308
+ 14.3 “新”自然数 N 的基本属性 (Basic properties of the ‘new’ N) ................. 313
+ 14.4 整数加法 (Integer addition) .............................................. 316
+ 14.5 λD 中基本计算的示例 (An example of a basic computation in λD) ........... 320
+ 14.6 加法的算术定律 (Arithmetical laws for addition) .......................... 322
+ 14.7 自然数和负数加法的闭合性 (Closure under addition for natural and negative numbers) .......................................................... 324
+ 14.8 整数减法 (Integer subtraction) ............................................ 327
+ 14.9 整数的相反数 (The opposite of an integer) ............................... 330
+ 14.10 整数的不等关系 (Inequality relations on Z) ............................... 332
+ 14.11 整数的乘法 (Multiplication of integers) .................................. 335
+ 14.12 可整除性 (Divisibility) ................................................... 338
+ 14.13 证明的无关性 (Irrelevance of proof) ...................................... 340
+ 14.14 总结 (Conclusions) ....................................................... 341
+ 14.15 拓展阅读 (Further reading) .............................................. 343
+ **习题** (Exercises) ............................................................. 344
+
+------
+
+**第15章 一个详细示例** (Chapter 15: An Elaborated Example)
+
+15.1 正式化证明贝祖定理 (Formalising a proof of Bézout’s Lemma) ............ 349
+ 15.2 准备工作 (Preparatory work) .............................................. 352
+ 15.3 贝祖定理证明的第一部分 (Part I of the proof of Bézout’s Lemma) ........... 354
+ 15.4 第二部分的证明 (Part II of the proof) .................................... 357
+ 15.5 第三部分的证明 (Part III of the proof) ................................... 360
+ 15.6 贝祖定理证明中的空白 (The holes in the proof of Bézout’s Lemma) ........ 363
+ 15.7 整数的最小值定理 (The Minimum Theorem for Z) .......................... 364
+ 15.8 除法定理 (The Division Theorem) ......................................... 369
+ 15.9 总结 (Conclusions) ....................................................... 371
+ 15.10 拓展阅读 (Further reading) .............................................. 373
+ **习题** (Exercises) ............................................................. 376
+
+------
+
+**第16章 进一步的视角** (Chapter 16: Further Perspectives)
+
+16.1 λD 的有用应用 (Useful applications of λD) ................................. 379
+ 16.2 基于类型论的证明助手 (Proof assistants based on type theory) ............ 380
+ 16.3 该领域的未来 (Future of the field) ....................................... 384
+ 16.4 总结 (Conclusions) ....................................................... 386
+ 16.5 拓展阅读 (Further reading) .............................................. 387
+
+------
+
+**附录 A: λD 中的逻辑** (Appendix A: Logic in λD)
+
+A.1 构造命题逻辑 (Constructive propositional logic) ............................ 391
+ A.2 经典命题逻辑 (Classical propositional logic) ............................... 393
+ A.3 构造谓词逻辑 (Constructive predicate logic) ............................... 395
+ A.4 经典谓词逻辑 (Classical predicate logic) ................................. 396
+
+------
+
+**附录 B: 算术公理、定义与引理** (Appendix B: Arithmetical Axioms, Definitions and Lemmas)
+
+................................................................................. 397
+
+------
+
+**附录 C: λD 中的两个完整示例证明** (Appendix C: Two Complete Example Proofs in λD)
+
+C.1 N 中加法的闭合性 (Closure under addition in N) ............................. 403
+ C.2 最小值定理 (The Minimum Theorem) ......................................... 405
+
+------
+
+**附录 D: λD 的推导规则** (Appendix D: Derivation Rules for λD)
+
+................................................................................. 409
+
+------
+
+**参考文献** (References)
+
+................................................................................. 411
+
+------
+
+**人名索引** (Index of Names)
+
+................................................................................. 419
+
+------
+
+**定义索引** (Index of Definitions)
+
+................................................................................. 421
+
+------
+
+**符号索引** (Index of Symbols)
+
+................................................................................. 423
+
+------
+
+**主题索引** (Index of Subjects)
+
+................................................................................. 425
+
+---------------------------------------------------
+
 **第1章 无类型λ演算** (Chapter 1: Untyped Lambda Calculus)  
 1.1 输入-输出行为 (Input-Output Behaviour of Functions)  
 1.2 函数的本质 (The Essence of Functions)  
